[gd_scene load_steps=4 format=3 uid="uid://b2v4o6hwdnhmp"]

[ext_resource type="Texture2D" uid="uid://b35pvobmu0s3c" path="res://assets/sprites/icon.svg" id="1_bmj54"]
[ext_resource type="Script" path="res://scripts/items/pistol.gd" id="1_es3bs"]
[ext_resource type="PackedScene" uid="uid://b2rwbi3ntg6ml" path="res://scenes/projectiles/bullet.tscn" id="2_b0ijk"]

[node name="Pistol" type="Node2D"]
script = ExtResource("1_es3bs")
BULLET = ExtResource("2_b0ijk")
damage = 10.0
speed = 2000.0
range = 700.0

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(35, 0)
rotation = 1.5708
scale = Vector2(0.0323069, 0.217589)
texture = ExtResource("1_bmj54")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Sprite2D"]
position = Vector2(-0.00123255, -50.5539)
rotation = -1.57082
scale = Vector2(4.59581, 30.9532)
skew = 2.38419e-05

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ShootingTimer" to="." method="_on_timer_timeout"]
